spec/e2e/number/leading_dot.lit
# error: [line 2] Error at ".": I was expecting an expression here.
.123
